--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -25,6 +25,9 @@
 }
 
 @layer components {
+    .site-header,#siteNav>li.ctsize, #siteNav>li.dropdown{@apply static}
+
+    #siteNav ul.dropdown li a:hover{@apply !bg-transparent}
     .btn-featured{@apply font-normal rounded-full bg-gradient-to-b from-[#00bef9] to-[#015fea] border-none  hover:text-white hover:-translate-y-1 hover:opacity-90 hover:scale-95}
     .btn-contrast{@apply font-normal rounded-full bg-white text-black-900 border-white hover:text-white hover:bg-black-900 hover:border-white }
     .template-index #header:not(.stickyHeader){@apply text-white bg-transparent absolute w-full border-none}
