--- a/assets/custom.css
+++ b/assets/custom.css
@@ -180,6 +180,10 @@
   }
 }
 
+.site-header,#siteNav>li.ctsize, #siteNav>li.dropdown{
+  position:static;
+}
+
 .btn-featured{
   border-radius:9999px;
   border-style:none;
@@ -271,12 +275,12 @@
   top:2rem;
 }
 
-.z-20{
-  z-index:20;
+.left-0{
+  left:0px;
 }
 
-.m-0{
-  margin:0px;
+.z-20{
+  z-index:20;
 }
 
 .\!m-0{
@@ -291,6 +295,16 @@
 .mx-auto{
   margin-left:auto;
   margin-right:auto;
+}
+
+.mx-2{
+  margin-left:0.5rem;
+  margin-right:0.5rem;
+}
+
+.mx-1{
+  margin-left:0.25rem;
+  margin-right:0.25rem;
 }
 
 .mb-0{
@@ -361,6 +375,10 @@
   margin-top:5rem;
 }
 
+.mt-auto{
+  margin-top:auto;
+}
+
 .block{
   display:block;
 }
@@ -395,6 +413,10 @@
 
 .h-full{
   height:100%;
+}
+
+.h-80{
+  height:20rem;
 }
 
 .max-h-9{
@@ -437,6 +459,10 @@
   width:100%;
 }
 
+.\!w-full{
+  width:100% !important;
+}
+
 .-translate-x-1\/2{
   --tw-translate-x:-50%;
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -466,10 +492,6 @@
 
 .flex-wrap{
   flex-wrap:wrap;
-}
-
-.items-start{
-  align-items:flex-start;
 }
 
 .items-end{
@@ -526,6 +548,10 @@
   border-style:solid;
 }
 
+.border-none{
+  border-style:none;
+}
+
 .border-black-300{
   --tw-border-opacity:1;
   border-color:rgb(204 204 204 / var(--tw-border-opacity));
@@ -564,12 +590,12 @@
      object-fit:cover;
 }
 
-.p-0{
-  padding:0px;
-}
-
 .\!p-0{
   padding:0px !important;
+}
+
+.p-8{
+  padding:2rem;
 }
 
 .\!px-7{
@@ -610,6 +636,36 @@
 .py-20{
   padding-top:5rem;
   padding-bottom:5rem;
+}
+
+.py-0{
+  padding-top:0px;
+  padding-bottom:0px;
+}
+
+.\!py-0{
+  padding-top:0px !important;
+  padding-bottom:0px !important;
+}
+
+.py-8{
+  padding-top:2rem;
+  padding-bottom:2rem;
+}
+
+.\!py-4{
+  padding-top:1rem !important;
+  padding-bottom:1rem !important;
+}
+
+.\!py-2{
+  padding-top:0.5rem !important;
+  padding-bottom:0.5rem !important;
+}
+
+.px-8{
+  padding-left:2rem;
+  padding-right:2rem;
 }
 
 .pb-0{
@@ -725,12 +781,21 @@
   line-height:1.75rem;
 }
 
+.text-2xl{
+  font-size:1.5rem;
+  line-height:2rem;
+}
+
 .font-bold{
   font-weight:700;
 }
 
 .font-medium{
   font-weight:500;
+}
+
+.font-normal{
+  font-weight:400;
 }
 
 .capitalize{
@@ -751,6 +816,11 @@
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-black-900{
+  --tw-text-opacity:1;
+  color:rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .opacity-0{
   opacity:0;
 }
@@ -761,6 +831,12 @@
 
 .opacity-60{
   opacity:0.6;
+}
+
+.shadow-none{
+  --tw-shadow:0 0 #0000;
+  --tw-shadow-colored:0 0 #0000;
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline{
@@ -861,6 +937,10 @@
   .md\:pl-6{
     padding-left:1.5rem;
   }
+
+  .md\:pl-8{
+    padding-left:2rem;
+  }
 }
 
 @media (min-width: 1024px){
@@ -870,5 +950,9 @@
 
   .lg\:w-\[33vw\]{
     width:33vw;
+  }
+
+  .lg\:pl-16{
+    padding-left:4rem;
   }
 }
