--- a/assets/custom.css
+++ b/assets/custom.css
@@ -184,6 +184,10 @@
   position:static;
 }
 
+#siteNav ul.dropdown li a:hover{
+  background-color:transparent !important;
+}
+
 .btn-featured{
   border-radius:9999px;
   border-style:none;
@@ -255,6 +259,10 @@
   position:relative;
 }
 
+.left-0{
+  left:0px;
+}
+
 .left-1\/2{
   left:50%;
 }
@@ -275,16 +283,17 @@
   top:2rem;
 }
 
-.left-0{
-  left:0px;
-}
-
 .z-20{
   z-index:20;
 }
 
 .\!m-0{
   margin:0px !important;
+}
+
+.mx-1{
+  margin-left:0.25rem;
+  margin-right:0.25rem;
 }
 
 .mx-3{
@@ -295,16 +304,6 @@
 .mx-auto{
   margin-left:auto;
   margin-right:auto;
-}
-
-.mx-2{
-  margin-left:0.5rem;
-  margin-right:0.5rem;
-}
-
-.mx-1{
-  margin-left:0.25rem;
-  margin-right:0.25rem;
 }
 
 .mb-0{
@@ -411,16 +410,20 @@
   height:50%;
 }
 
-.h-full{
-  height:100%;
-}
-
 .h-80{
   height:20rem;
 }
 
+.h-full{
+  height:100%;
+}
+
 .max-h-9{
   max-height:2.25rem;
+}
+
+.\!w-full{
+  width:100% !important;
 }
 
 .w-1\/2{
@@ -457,10 +460,6 @@
 
 .w-full{
   width:100%;
-}
-
-.\!w-full{
-  width:100% !important;
 }
 
 .-translate-x-1\/2{
@@ -562,6 +561,10 @@
   border-color:rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.\!bg-transparent{
+  background-color:transparent !important;
+}
+
 .bg-gradient-to-b{
   background-image:linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -603,6 +606,11 @@
   padding-right:1.75rem !important;
 }
 
+.\!py-2{
+  padding-top:0.5rem !important;
+  padding-bottom:0.5rem !important;
+}
+
 .\!py-3{
   padding-top:0.75rem !important;
   padding-bottom:0.75rem !important;
@@ -636,36 +644,6 @@
 .py-20{
   padding-top:5rem;
   padding-bottom:5rem;
-}
-
-.py-0{
-  padding-top:0px;
-  padding-bottom:0px;
-}
-
-.\!py-0{
-  padding-top:0px !important;
-  padding-bottom:0px !important;
-}
-
-.py-8{
-  padding-top:2rem;
-  padding-bottom:2rem;
-}
-
-.\!py-4{
-  padding-top:1rem !important;
-  padding-bottom:1rem !important;
-}
-
-.\!py-2{
-  padding-top:0.5rem !important;
-  padding-bottom:0.5rem !important;
-}
-
-.px-8{
-  padding-left:2rem;
-  padding-right:2rem;
 }
 
 .pb-0{
@@ -781,21 +759,12 @@
   line-height:1.75rem;
 }
 
-.text-2xl{
-  font-size:1.5rem;
-  line-height:2rem;
-}
-
 .font-bold{
   font-weight:700;
 }
 
 .font-medium{
   font-weight:500;
-}
-
-.font-normal{
-  font-weight:400;
 }
 
 .capitalize{
@@ -811,14 +780,14 @@
   color:rgb(102 102 102 / var(--tw-text-opacity));
 }
 
-.text-white{
-  --tw-text-opacity:1;
-  color:rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-black-900{
   --tw-text-opacity:1;
   color:rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity:1;
+  color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .opacity-0{
@@ -926,6 +895,10 @@
 
 .last\:mr-0:last-child{
   margin-right:0px;
+}
+
+.hover\:opacity-90:hover{
+  opacity:0.9;
 }
 
 @media (min-width: 768px){
