--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -853,7 +853,7 @@ a.gimg-link { display:block; border-radius:{{settings.primg_rad}}px; overflow: h
   .siteNavigation .mm6bx .gview-img .lbl { display:none;}
   
   #siteNav ul.dropdown, #siteNav ul.dropdown ul { border:1px solid {{ settings.nav_dd_divider }}; padding:15px; opacity:0; visibility:hidden; width:240px;
-    position:absolute; top:auto; left:-17px; z-index:999; background-color:{{ settings.nav_dd_link_bg }}; box-shadow:2px 2px 2px 0 rgba(0, 0, 0, 0.3); transition:all 0.3s ease-in-out; }
+    position:absolute; top:auto; z-index:999; background-color:{{ settings.nav_dd_link_bg }}; box-shadow:2px 2px 2px 0 rgba(0, 0, 0, 0.3); transition:all 0.3s ease-in-out; }
   #siteNav ul.dropdown li { border-top:1px solid {{ settings.nav_dd_divider }}; position:relative; }
   #siteNav ul.dropdown li:first-child { border:0 none; }
   #siteNav ul.dropdown li a { font-size:{{settings.mm_font_size}}px; color:{{ settings.nav_dd_link }}; font-weight:400; padding:8px 5px; background-color:{{ settings.nav_dd_link_bg }}; }
