--- a/snippets/simple-megamenu.liquid
+++ b/snippets/simple-megamenu.liquid
@@ -1,10 +1,10 @@
 <ul class="dropdown !py-2 !w-full left-0 border-none shadow-none flex justify-between text-black-900 h-80">
 
-{% assign liClass = "bg-no-repeat w-1/3 mx-1" %}
+{% assign liClass = "bg-no-repeat w-1/3 mx-1 hover:opacity-90 transition-all" %}
 
     <li class="{{ liClass }}" {% if blkSet.img_url1 != balnk %}style="background-image: url({{blkSet.img_url1 | image_url: width:master }});"{% endif %}>
-        {% if blkSet.text_link1 != blank and blkSet.url_link1 == blank%}
-        <a href="{ {blkSet.text_link1 }}">
+        {% if blkSet.text_link1 == blank and blkSet.url_link1 != blank%}
+        <a class="!bg-transparent h-full" href="{ {blkSet.text_link1 }}">
         {% endif %}
         <div class="h-full flex flex-col p-8 pb-0 {% if blkSet.img_url1 == balnk %}lg:pl-16 md:pl-8{% endif %}">
             <p class="text-base mb-0">{{ blkSet.text_sub1 }}</p>
@@ -14,14 +14,15 @@
             {% endif %}
 
         </div>
-        {% if blkSet.text_link1 != blank and blkSet.url_link1 == blank%}
+        {% if blkSet.text_link1 == blank and blkSet.url_link1 != blank%}
         </a>
         {% endif %}
     </li>
 
     <li class="{{ liClass }}" {% if blkSet.img_url2 != balnk %}style="background-image: url({{blkSet.img_url2 | image_url: width:master }});"{% endif %}>
-        {% if blkSet.text_link2 != blank and blkSet.url_link2 == blank%}
-        <a href="{ {blkSet.text_link2 }}">
+       
+       {% if blkSet.text_link2 == blank and blkSet.url_link2 != blank%}
+        <a class="!bg-transparent h-full" href="{ {blkSet.text_link2 }}">
         {% endif %}
         <div class="h-full flex flex-col p-8 pb-0 {% if blkSet.img_url2 == balnk %}lg:pl-16 md:pl-8{% endif %}">
             <p class="text-base mb-0">{{ blkSet.text_sub2 }}</p>
@@ -31,14 +32,14 @@
             {% endif %}
 
         </div>
-        {% if blkSet.text_link2 != blank and blkSet.url_link2 == blank%}
+        {% if blkSet.text_link2 == blank and blkSet.url_link2 != blank%}
         </a>
         {% endif %}
     </li>
 
     <li class="{{ liClass }}" {% if blkSet.img_url3 != balnk %}style="background-image: url({{blkSet.img_url3 | image_url: width:master }});"{% endif %}>
-        {% if blkSet.text_link3 != blank and blkSet.url_link3 == blank%}
-        <a href="{ {blkSet.text_link3 }}">
+        {% if blkSet.text_link3 == blank and blkSet.url_link3 != blank%}
+        <a class="!bg-transparent h-full" href="{ {blkSet.text_link3 }}">
         {% endif %}
         <div class="h-full flex flex-col p-8 pb-0 {% if blkSet.img_url3 == balnk %}lg:pl-16 md:pl-8{% endif %}">
             <p class="text-base mb-0">{{ blkSet.text_sub3 }}</p>
@@ -48,7 +49,7 @@
             {% endif %}
 
         </div>
-        {% if blkSet.text_link3 != blank and blkSet.url_link3 == blank%}
+        {% if blkSet.text_link3 == blank and blkSet.url_link3 != blank%}
         </a>
         {% endif %}
     </li>
