--- a/assets/custom.css
+++ b/assets/custom.css
@@ -382,6 +382,14 @@
   margin-top:auto;
 }
 
+.\!mb-0{
+  margin-bottom:0px !important;
+}
+
+.ml-12{
+  margin-left:3rem;
+}
+
 .block{
   display:block;
 }
@@ -466,6 +474,10 @@
   width:100%;
 }
 
+.w-auto{
+  width:auto;
+}
+
 .-translate-x-1\/2{
   --tw-translate-x:-50%;
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -535,6 +547,10 @@
   border-radius:3rem;
 }
 
+.rounded-none{
+  border-radius:0px;
+}
+
 .border-0{
   border-width:0px;
 }
@@ -545,6 +561,10 @@
 
 .border-l-\[\.5rem\]{
   border-left-width:.5rem;
+}
+
+.border-b{
+  border-bottom-width:1px;
 }
 
 .border-solid{
@@ -567,6 +587,10 @@
 
 .\!bg-transparent{
   background-color:transparent !important;
+}
+
+.bg-transparent{
+  background-color:transparent;
 }
 
 .bg-gradient-to-b{
@@ -603,6 +627,10 @@
 
 .p-8{
   padding:2rem;
+}
+
+.p-0{
+  padding:0px;
 }
 
 .\!px-7{
@@ -763,6 +791,11 @@
   line-height:1.75rem;
 }
 
+.text-sm{
+  font-size:0.875rem;
+  line-height:1.25rem;
+}
+
 .font-bold{
   font-weight:700;
 }
@@ -792,6 +825,11 @@
 .text-white{
   --tw-text-opacity:1;
   color:rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.\!text-white{
+  --tw-text-opacity:1 !important;
+  color:rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 
 .opacity-0{
