--- a/sections/products-slider-full.liquid
+++ b/sections/products-slider-full.liquid
@@ -32,7 +32,7 @@
 
         </div>
           {% if block.settings.product_image %}
-          <div class='scale-90 transition-all duration-700 delay-300 z' tag-name="product-img">{{ block.settings.product_image | image_url: width: 1000 | image_tag: width: nil, loading: 'lazy' }}</div>
+          <div class='scale-90 transition-all duration-700 delay-300' tag-name="product-img">{{ block.settings.product_image | image_url: width: 1000 | image_tag: width: nil, loading: 'lazy' }}</div>
           {% else %}
           <div class='scale-90 transition-all duration-700 delay-300' tag-name="product-img">{{ product.featured_image | image_url: width: 1000 | image_tag: width: nil, loading: 'lazy' }}</div>
           {% endif %}
