--- a/snippets/newsletter-form.liquid
+++ b/snippets/newsletter-form.liquid
@@ -7,7 +7,7 @@
 				<input type="email" class="!mb-0 input-group__field newsletter__input !bg-transparent border-none p-0 rounded-none !text-white" name="EMAIL" value="{% if customer %}{{ customer.email }}{% endif %}" placeholder="{{ 'general.newsletter_form.email_placeholder' | t }}" required>
 				<span class="input-group__btn w-auto"><button type="submit" class="btn newsletter__submit mcNsBtn !bg-transparent" name="commit"><span class="newsletter__submit-text--large">></span></button></span>
 			</div>
-			{% if content %} <p class="text-sm">{{ content }}</p> {% endif %}
+			{% if content %} <p class="text-sm text-black-400">{{ content }}</p> {% endif %}
 		</div>
 		<p class="form-success" style="display:none;">{{ 'general.newsletter_form.mailChimp_confirmation' | t }}</p>
 		<p class="errors" style="display:none;">{{ 'general.newsletter_form.mailChimp_error' | t }}</p>
@@ -25,7 +25,7 @@
 					<span class="input-group__btn w-auto"><button type="submit" class="btn newsletter__submit !bg-transparent" name="commit" id="subscribe{{ formId }}">></button></span>
 				</div>
 				
-				{% if content %} <p class="text-sm">{{ content }}</p> {% endif %}
+				{% if content %} <p class="text-sm text-black-400">{{ content }}</p> {% endif %}
 			</div>
 		{%- endif -%}
 	{% endform %}
