--- a/assets/custom.css
+++ b/assets/custom.css
@@ -29,8 +29,15 @@
 
 [section-name = 'store-features'] [tag-name = 'features-header'] .h3{
   margin-bottom:1.75rem;
-  font-size:2.5rem;
-  line-height:3rem;
+  font-size:1.875rem;
+  line-height:2.25rem;
+}
+
+@media (min-width: 768px){
+  [section-name = 'store-features'] [tag-name = 'features-header'] .h3{
+    font-size:2.5rem;
+    line-height:3rem;
+  }
 }
 
 [section-name = 'store-features'] [tag-name = 'features-header'] p{
@@ -338,6 +345,11 @@ hover{
   margin-bottom:2rem;
 }
 
+.my-4{
+  margin-top:1rem;
+  margin-bottom:1rem;
+}
+
 .\!mb-0{
   margin-bottom:0px !important;
 }
@@ -356,10 +368,6 @@ hover{
 
 .mb-12{
   margin-bottom:3rem;
-}
-
-.mb-13{
-  margin-bottom:3.25rem;
 }
 
 .mb-2{
@@ -386,12 +394,12 @@ hover{
   margin-bottom:2rem;
 }
 
-.ml-12{
-  margin-left:3rem;
+.ml-1{
+  margin-left:0.25rem;
 }
 
-.ml-2{
-  margin-left:0.5rem;
+.ml-12{
+  margin-left:3rem;
 }
 
 .ml-4{
@@ -418,12 +426,16 @@ hover{
   margin-top:5rem;
 }
 
+.mt-6{
+  margin-top:1.5rem;
+}
+
 .mt-auto{
   margin-top:auto;
 }
 
-.mr-2{
-  margin-right:0.5rem;
+.mt-4{
+  margin-top:1rem;
 }
 
 .block{
@@ -482,8 +494,8 @@ hover{
   width:33.333333%;
 }
 
-.w-1\/5{
-  width:20%;
+.w-1\/6{
+  width:16.666667%;
 }
 
 .w-2\/3{
@@ -498,20 +510,20 @@ hover{
   width:60%;
 }
 
-.w-\[38\%\]{
-  width:38%;
-}
-
-.w-\[62\%\]{
-  width:62%;
-}
-
 .w-auto{
   width:auto;
 }
 
 .w-full{
   width:100%;
+}
+
+.w-5\/6{
+  width:83.333333%;
+}
+
+.w-\[12\.5\%\]{
+  width:12.5%;
 }
 
 .-translate-x-1\/2{
@@ -575,16 +587,16 @@ hover{
   border-radius:0.25rem;
 }
 
+.rounded-3xl{
+  border-radius:1.5rem;
+}
+
 .rounded-full{
   border-radius:9999px;
 }
 
 .rounded-none{
   border-radius:0px;
-}
-
-.rounded-section{
-  border-radius:3rem;
 }
 
 .border-0{
@@ -623,10 +635,6 @@ hover{
 
 .\!bg-transparent{
   background-color:transparent !important;
-}
-
-.bg-transparent{
-  background-color:transparent;
 }
 
 .bg-gradient-to-b{
@@ -669,29 +677,19 @@ hover{
   padding:2rem;
 }
 
-.\!px-7{
-  padding-left:1.75rem !important;
-  padding-right:1.75rem !important;
-}
-
 .\!py-2{
   padding-top:0.5rem !important;
   padding-bottom:0.5rem !important;
 }
 
-.\!py-3{
-  padding-top:0.75rem !important;
-  padding-bottom:0.75rem !important;
-}
-
-.px-12{
-  padding-left:3rem;
-  padding-right:3rem;
-}
-
 .px-2{
   padding-left:0.5rem;
   padding-right:0.5rem;
+}
+
+.px-3{
+  padding-left:0.75rem;
+  padding-right:0.75rem;
 }
 
 .px-4{
@@ -709,9 +707,14 @@ hover{
   padding-bottom:0.25rem;
 }
 
-.py-20{
-  padding-top:5rem;
-  padding-bottom:5rem;
+.py-10{
+  padding-top:2.5rem;
+  padding-bottom:2.5rem;
+}
+
+.py-2{
+  padding-top:0.5rem;
+  padding-bottom:0.5rem;
 }
 
 .pb-0{
@@ -730,6 +733,10 @@ hover{
   padding-bottom:6rem;
 }
 
+.pb-5{
+  padding-bottom:1.25rem;
+}
+
 .pb-6{
   padding-bottom:1.5rem;
 }
@@ -740,10 +747,6 @@ hover{
 
 .pt-0{
   padding-top:0px;
-}
-
-.pt-12{
-  padding-top:3rem;
 }
 
 .pt-18{
@@ -779,9 +782,9 @@ hover{
   line-height:1.75rem !important;
 }
 
-.text-1_5xl{
-  font-size:1.375rem;
-  line-height:1.875rem;
+.text-2xl{
+  font-size:1.5rem;
+  line-height:2rem;
 }
 
 .text-3_5xl{
@@ -794,22 +797,9 @@ hover{
   line-height:2.25rem;
 }
 
-.text-4_5xl{
-  font-size:2.5rem;
-  line-height:3rem;
-}
-
 .text-4xl{
   font-size:2.25rem;
   line-height:2.5rem;
-}
-
-.text-\[1\.25rem\]{
-  font-size:1.25rem;
-}
-
-.text-\[2\.625rem\]{
-  font-size:2.625rem;
 }
 
 .text-base{
@@ -871,10 +861,6 @@ hover{
 .text-white{
   --tw-text-opacity:1;
   color:rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.caret-white{
-  caret-color:#fff;
 }
 
 .opacity-0{
@@ -989,9 +975,151 @@ hover{
 }
 
 @media (min-width: 768px){
+  .md\:absolute{
+    position:absolute;
+  }
+
+  .md\:m-0{
+    margin:0px;
+  }
+
+  .md\:mx-3{
+    margin-left:0.75rem;
+    margin-right:0.75rem;
+  }
+
+  .md\:mb-0{
+    margin-bottom:0px;
+  }
+
+  .md\:mb-12{
+    margin-bottom:3rem;
+  }
+
+  .md\:mb-13{
+    margin-bottom:3.25rem;
+  }
+
+  .md\:mb-20{
+    margin-bottom:5rem;
+  }
+
+  .md\:mb-4{
+    margin-bottom:1rem;
+  }
+
+  .md\:mb-5{
+    margin-bottom:1.25rem;
+  }
+
+  .md\:ml-2{
+    margin-left:0.5rem;
+  }
+
+  .md\:mt-0{
+    margin-top:0px;
+  }
+
+  .md\:mt-10{
+    margin-top:2.5rem;
+  }
+
+  .md\:mb-8{
+    margin-bottom:2rem;
+  }
+
+  .md\:mb-6{
+    margin-bottom:1.5rem;
+  }
+
+  .md\:mb-2{
+    margin-bottom:0.5rem;
+  }
+
+  .md\:mt-20{
+    margin-top:5rem;
+  }
+
+  .md\:ml-12{
+    margin-left:3rem;
+  }
+
+  .md\:flex{
+    display:flex;
+  }
+
+  .md\:w-1\/5{
+    width:20%;
+  }
+
+  .md\:w-3\/5{
+    width:60%;
+  }
+
+  .md\:w-\[38\%\]{
+    width:38%;
+  }
+
+  .md\:w-\[62\%\]{
+    width:62%;
+  }
+
+  .md\:w-auto{
+    width:auto;
+  }
+
+  .md\:w-full{
+    width:100%;
+  }
+
+  .md\:w-2\/5{
+    width:40%;
+  }
+
+  .md\:flex-row{
+    flex-direction:row;
+  }
+
+  .md\:rounded-section{
+    border-radius:3rem;
+  }
+
+  .md\:p-12{
+    padding:3rem;
+  }
+
+  .md\:\!px-7{
+    padding-left:1.75rem !important;
+    padding-right:1.75rem !important;
+  }
+
+  .md\:\!py-3{
+    padding-top:0.75rem !important;
+    padding-bottom:0.75rem !important;
+  }
+
+  .md\:px-0{
+    padding-left:0px;
+    padding-right:0px;
+  }
+
+  .md\:px-5{
+    padding-left:1.25rem;
+    padding-right:1.25rem;
+  }
+
   .md\:px-8{
     padding-left:2rem;
     padding-right:2rem;
+  }
+
+  .md\:py-20{
+    padding-top:5rem;
+    padding-bottom:5rem;
+  }
+
+  .md\:pb-9{
+    padding-bottom:2.25rem;
   }
 
   .md\:pl-6{
@@ -1000,6 +1128,58 @@ hover{
 
   .md\:pl-8{
     padding-left:2rem;
+  }
+
+  .md\:text-left{
+    text-align:left;
+  }
+
+  .md\:text-1_5xl{
+    font-size:1.375rem;
+    line-height:1.875rem;
+  }
+
+  .md\:text-2xl{
+    font-size:1.5rem;
+    line-height:2rem;
+  }
+
+  .md\:text-3xl{
+    font-size:1.875rem;
+    line-height:2.25rem;
+  }
+
+  .md\:text-4_5xl{
+    font-size:2.5rem;
+    line-height:3rem;
+  }
+
+  .md\:text-4xl{
+    font-size:2.25rem;
+    line-height:2.5rem;
+  }
+
+  .md\:text-\[1\.25rem\]{
+    font-size:1.25rem;
+  }
+
+  .md\:text-\[2\.625rem\]{
+    font-size:2.625rem;
+  }
+
+  .md\:text-lg{
+    font-size:1.125rem;
+    line-height:1.75rem;
+  }
+
+  .md\:text-xl{
+    font-size:1.25rem;
+    line-height:1.75rem;
+  }
+
+  .md\:text-base{
+    font-size:1rem;
+    line-height:1.5rem;
   }
 }
 
