--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -43,6 +43,7 @@
 
     <script src="{{ 'lazysizes.js' | asset_url }}" async></script>
   	<script src="{{ 'jquery.min.js' | asset_url }}"defer="defer"></script>
+  	<script src="{{ 'custom.js' | asset_url }}"defer="defer"></script>
 
 
 	<script>
