--- a/sections/data-statistics.liquid
+++ b/sections/data-statistics.liquid
@@ -3,23 +3,23 @@
 <section section-name="data-statistics" class="{% render 'section-interva-set' , secSt:secSt %}" >
 
   <div class="page-width px-4">
-    <div class="rounded-section flex justify-between" style="background-color: {{ secSt.bg_color }};">
-      <div class="pt-12 px-12 w-[62%]">
-        <h1 class="text-[2.625rem] pb-9 border-0 border-b-2 border-solid border-black-300 mb-0 relative
+    <div class="md:rounded-section rounded-3xl flex md:flex-row flex-col justify-between overflow-hidden" style="background-color: {{ secSt.bg_color }};">
+      <div class="md:p-12 pt-6 px-3 md:w-[62%]">
+        <h1 class="md:text-[2.625rem] text-3xl md:pb-9 pb-5 border-0 border-b-2 border-solid border-black-300 mb-0 relative
         after:content-[''] after:h-[2px] after:w-1/4 after:bg-black-900 after:block after:absolute after:-bottom-[2px]">{{ secSt.title }}</h1>
-        <div class="mt-10 flex flex-wrap">
+        <div class="md:mt-10 mt-6 flex flex-wrap">
           {% for block in section.blocks %}
           <div class="w-1/2 mb-10">
             <div class="flex items-end font-medium">
-              <p class="text-4xl mb-0">{{block.settings.text_main}}</p>
-              <p class="text-[1.25rem] ml-2">{{block.settings.text_suf}}</p>
+              <p class="md:text-4xl text-xl mb-0">{{block.settings.text_main}}</p>
+              <p class="md:text-[1.25rem] text-base md:ml-2 ml-1">{{block.settings.text_suf}}</p>
             </div>
-            <p class="text-lg">{{block.settings.text_sub}}</p>
+            <p class="text-md">{{block.settings.text_sub}}</p>
           </div>
           {% endfor %}
         </div>
       </div>
-      <div class="border-0 border-l-[.5rem] border-solid border-white w-[38%]">
+      <div class="border-0 border-l-[.5rem] border-solid border-white md:w-[38%]">
         <img class="h-full object-cover block" src="{{ secSt.image | image_url: master }}">
       </div>
     </div>
