--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -134,16 +134,16 @@
       </div>  
 
 
-      <div class="flex justify-between text-black-400 my-8">
+      <div class="md:flex justify-between text-black-400 my-8">
         {% for block in section.blocks %}     
         {% assign blkSt = block.settings %}
       
         {% case block.type %}
         {% when 'legal' %}
-        <div class="flex items-center">
-          <div>{{ blkSt.logo_img | image_url: width: 200 | image_tag: width: nil, loading: 'lazy' }} </div>
-          <div class="ml-12"> <a class="text-black-400" href="{{blkSt.text_link1}}"> {{blkSt.text_link1}} </a> </div>
-          <div class="ml-12"> <a class="text-black-400" href="{{blkSt.text_link2}}"> {{blkSt.text_link2}} </a> </div>
+        <div class="flex items-center justify-between md:mb-0 mb-4">
+          <div class="md:w-auto w-1/3">{{ blkSt.logo_img | image_url: width: 200 | image_tag: width: nil, loading: 'lazy' }} </div>
+          <div class="md:w-auto w-1/3 md:text-left text-center text-sm md:text-base md:ml-12"> <a class="text-black-400" href="{{blkSt.text_link1}}"> {{blkSt.text_link1}} </a> </div>
+          <div class="md:w-auto w-1/3 md:text-left text-center text-sm md:text-base md:ml-12"> <a class="text-black-400" href="{{blkSt.text_link2}}"> {{blkSt.text_link2}} </a> </div>
         </div>     
         {% when'socialicons' %}
         <div id="text-{{ block.id }}" class="socialicons flex items-center">
@@ -264,12 +264,6 @@
           "type":"image_picker",
           "id":"current_flag",
           "label":"Current flag"
-        },
-        {
-          "type":"text",
-          "id":"current_region",
-          "label":"Current region name",
-          "default": "United Kingdom"
         },
         {
           "type": "link_list",
