--- a/sections/image-text.liquid
+++ b/sections/image-text.liquid
@@ -4,13 +4,13 @@
   <section section-name="image-text" class="{% render 'section-interva-set' , secSt:secSt %}" >
     <div class="page-width px-4">
 
-      <div class="rounded-section flex overflow-hidden" style="background-color:{{secSt.bg_color}};">
-        <div class="w-3/5" >
+      <div class="md:rounded-section rounded-3xl md:flex overflow-hidden" style="background-color:{{secSt.bg_color}};">
+        <div class="md:w-3/5" >
           {{ secSt.bg_img | image_url: width: 800 | image_tag: width: nil, loading: 'lazy' }}
         </div>
-        <div class="w-2/5 flex flex-col justify-center mb-8 text-white md:pl-6">
-          <h1 class="text-4xl">{{ secSt.text_main  }}</h1>
-          <p class="text-xl mb-8">{{ secSt.text_sub  }}</p>
+        <div class="md:w-2/5 flex flex-col justify-center md:mb-8 my-4 text-white md:pl-6 px-4">
+          <h1 class="md:text-4xl text-2xl">{{ secSt.text_main  }}</h1>
+          <p class="md:text-xl text-lg md:mb-8 mb-4">{{ secSt.text_sub  }}</p>
           <div>
             <a href="{{ secSt.url }}" class="btn btn-contrast text-base py-1 px-5">{{ secSt.text_btn  }}</a>
           </div>
