--- a/sections/multiple-image-text.liquid
+++ b/sections/multiple-image-text.liquid
@@ -3,28 +3,23 @@
 <section section-name="multiple-image-text" class="{% render 'section-interva-set' , secSt:secSt %}" >
   <div class="page-width px-4">
 
-    <h1 class="text-4_5xl text-center mb-12">{{secSt.title}}</h1>
+    <h1 class="md:text-4_5xl text-3xl text-center md:mb-12 mb-8">{{secSt.title}}</h1>
 
-    <div class="flex" >
-
+    <div class="md:flex" >
       {% for block in section.blocks %}
       {%- assign blkSt = block.settings -%}
 
       {% if blkSt.bg_img != blank %}
-      <div class="{{blkSt.slide_w}} mx-3 last:mr-0 first:ml-0 flex flex-col">  
-        <div class="rounded-section overflow-hidden h-full mb-6" style="background-color:{{blkSt.bg_color}};">
-          {{ blkSt.bg_img | image_url: width: 1200 | image_tag: width: nil, loading: 'lazy', class: "h-full object-cover" }}
+      <div class="md:{{blkSt.slide_w}} md:mx-3 last:mr-0 first:ml-0 flex flex-col md:m-0 mb-8">  
+        <div class="md:rounded-section rounded-3xl overflow-hidden h-full md:mb-6 mb-2" style="background-color:{{blkSt.bg_color}};">
+          {{ blkSt.bg_img | image_url: width: 1200 | image_tag: width: nil, loading: 'lazy', class: "h-full object-cover block" }}
         </div>
-        <h1 class="text-3xl mb-2">{{ blkSt.text_main  }}</h1>
+        <h1 class="md:text-3xl text-2xl md:mb-2 mb-0">{{ blkSt.text_main  }}</h1>
         <p class="text-lg">{{ blkSt.text_sub  }}</p>
       </div>
       {% endif %}
 
       {% endfor %}
-
-
-
-
     </div>
 
   </div>
