--- a/sections/products-slider-full.liquid
+++ b/sections/products-slider-full.liquid
@@ -1,33 +1,31 @@
 {%- assign secSt = section.settings -%}
 
 <section section-name="products-slider-full" class="{% render 'section-interva-set' , secSt:secSt %}" style="background-image: linear-gradient({{secSt.bg_color}}, #fff);">
-  <div class="page-width text-center mb-13">
-    <h1 class="text-4_5xl">{{section.settings.title}}</h1> 
+  <div class="page-width text-center md:mb-13 mb-6">
+    <h1 class="md:text-4_5xl text-3xl">{{section.settings.title}}</h1> 
   </div>
 
   <div class="relative">
     <div class="absolute opacity-60 top-8 left-1/2 -translate-x-1/2 lg:w-[33vw] lg:h-[33vw] w-1/2 h-1/2 rounded-full shadow-[0px -10px 5px 3px #ededed] bg-gradient-to-b via-white from-white to-transparent"></div>
     <div class="relative" 
-    data-flickity='{"wrapAround": "true" }'>
+    data-flickity='{"wrapAround": "true","selectedAttraction": 0.01,"friction": 0.15 }'>
       {% for block in section.blocks %}
       <div class="page-width mr-4 opacity-30 transition-opacity duration-700 delay-300" >
         {%- assign product = block.settings.product -%}
         {% if product.title.size > 0 %}
-        <div tag-name="product-info" class="absolute left-4 top-4 opacity-0 transition-opacity duration-300 delay-700 w-full z-20">
-          <div>
+        <div tag-name="product-info" class="md:absolute relative md:mb-0 mb-8 left-4 top-4 opacity-0 transition-opacity duration-300 delay-700 w-full z-20">
+          <div class="">
             <h2 class="text-3_5xl mb-1">{{ product.title }}</h2>
-            <p class="text-1_5xl mb-12 text-black-600">Aviation grade magnesium alloy</p>
+            <p class="md:text-1_5xl text-lg md:mb-12 mb-2 text-black-600">Aviation grade magnesium alloy</p>
             <div class="flex items-center">
-              <a href="{{ product.url }}" class="btn text-base py-1 px-5"> {{ section.settings.btn_Text }} </a>
+              <a href="{{ product.url }}" class="btn text-base py-1 md:px-5 px-3"> {{ section.settings.btn_Text }} </a>
               <p class="text-xl ml-4 font-medium">{{ product.price | money}}</p>
             </div>
           </div>
           {% if block.settings.tags_image != blank %}
-
-
-            <div class="absolute right-4 top-4">
-              <img src="{{ block.settings.tags_image | image_url: master }}">
-            </div>
+          <div class="absolute right-4 top-4 md:w-auto w-[12.5%]">
+            <img src="{{ block.settings.tags_image | image_url: master }}">
+          </div>
           {% endif %}
 
         </div>
