平板端优化

--- a/sections/data-statistics.liquid
+++ b/sections/data-statistics.liquid
@@ -11,7 +11,7 @@
           {% for block in section.blocks %}
           <div class="w-1/2 mb-10">
             <div class="flex items-end font-medium">
-              <p class="md:text-4xl text-xl mb-0">{{block.settings.text_main}}</p>
+              <p class="lg:text-4xl md:text-2xl text-xl mb-0">{{block.settings.text_main}}</p>
               <p class="md:text-[1.25rem] text-base md:ml-2 ml-1">{{block.settings.text_suf}}</p>
             </div>
             <p class="text-md">{{block.settings.text_sub}}</p>
