--- a/assets/custom.css
+++ b/assets/custom.css
@@ -330,14 +330,14 @@ hover{
   margin-right:0.25rem;
 }
 
-.mx-3{
-  margin-left:0.75rem;
-  margin-right:0.75rem;
-}
-
 .mx-auto{
   margin-left:auto;
   margin-right:auto;
+}
+
+.my-4{
+  margin-top:1rem;
+  margin-bottom:1rem;
 }
 
 .my-8{
@@ -345,9 +345,9 @@ hover{
   margin-bottom:2rem;
 }
 
-.my-4{
-  margin-top:1rem;
-  margin-bottom:1rem;
+.mx-3{
+  margin-left:0.75rem;
+  margin-right:0.75rem;
 }
 
 .\!mb-0{
@@ -364,10 +364,6 @@ hover{
 
 .mb-10{
   margin-bottom:2.5rem;
-}
-
-.mb-12{
-  margin-bottom:3rem;
 }
 
 .mb-2{
@@ -398,10 +394,6 @@ hover{
   margin-left:0.25rem;
 }
 
-.ml-12{
-  margin-left:3rem;
-}
-
 .ml-4{
   margin-left:1rem;
 }
@@ -422,8 +414,8 @@ hover{
   margin-top:3.5rem;
 }
 
-.mt-20{
-  margin-top:5rem;
+.mt-4{
+  margin-top:1rem;
 }
 
 .mt-6{
@@ -434,8 +426,28 @@ hover{
   margin-top:auto;
 }
 
-.mt-4{
-  margin-top:1rem;
+.ml-2{
+  margin-left:0.5rem;
+}
+
+.mb-12{
+  margin-bottom:3rem;
+}
+
+.mb-13{
+  margin-bottom:3.25rem;
+}
+
+.ml-12{
+  margin-left:3rem;
+}
+
+.mr-2{
+  margin-right:0.5rem;
+}
+
+.mt-20{
+  margin-top:5rem;
 }
 
 .block{
@@ -494,20 +506,12 @@ hover{
   width:33.333333%;
 }
 
-.w-1\/6{
-  width:16.666667%;
-}
-
 .w-2\/3{
   width:66.666667%;
 }
 
-.w-2\/5{
-  width:40%;
-}
-
-.w-3\/5{
-  width:60%;
+.w-\[12\.5\%\]{
+  width:12.5%;
 }
 
 .w-auto{
@@ -518,12 +522,24 @@ hover{
   width:100%;
 }
 
-.w-5\/6{
-  width:83.333333%;
+.w-\[38\%\]{
+  width:38%;
 }
 
-.w-\[12\.5\%\]{
-  width:12.5%;
+.w-\[62\%\]{
+  width:62%;
+}
+
+.w-1\/5{
+  width:20%;
+}
+
+.w-2\/5{
+  width:40%;
+}
+
+.w-3\/5{
+  width:60%;
 }
 
 .-translate-x-1\/2{
@@ -597,6 +613,10 @@ hover{
 
 .rounded-none{
   border-radius:0px;
+}
+
+.rounded-section{
+  border-radius:3rem;
 }
 
 .border-0{
@@ -717,6 +737,26 @@ hover{
   padding-bottom:0.5rem;
 }
 
+.px-12{
+  padding-left:3rem;
+  padding-right:3rem;
+}
+
+.\!px-7{
+  padding-left:1.75rem !important;
+  padding-right:1.75rem !important;
+}
+
+.\!py-3{
+  padding-top:0.75rem !important;
+  padding-bottom:0.75rem !important;
+}
+
+.py-20{
+  padding-top:5rem;
+  padding-bottom:5rem;
+}
+
 .pb-0{
   padding-bottom:0px;
 }
@@ -769,6 +809,10 @@ hover{
   padding-top:2.25rem;
 }
 
+.pt-12{
+  padding-top:3rem;
+}
+
 .text-left{
   text-align:left;
 }
@@ -797,11 +841,6 @@ hover{
   line-height:2.25rem;
 }
 
-.text-4xl{
-  font-size:2.25rem;
-  line-height:2.5rem;
-}
-
 .text-base{
   font-size:1rem;
   line-height:1.5rem;
@@ -820,6 +859,29 @@ hover{
 .text-xl{
   font-size:1.25rem;
   line-height:1.75rem;
+}
+
+.text-4xl{
+  font-size:2.25rem;
+  line-height:2.5rem;
+}
+
+.text-\[1\.25rem\]{
+  font-size:1.25rem;
+}
+
+.text-\[2\.625rem\]{
+  font-size:2.625rem;
+}
+
+.text-1_5xl{
+  font-size:1.375rem;
+  line-height:1.875rem;
+}
+
+.text-4_5xl{
+  font-size:2.5rem;
+  line-height:3rem;
 }
 
 .font-bold{
@@ -1000,6 +1062,10 @@ hover{
     margin-bottom:3.25rem;
   }
 
+  .md\:mb-2{
+    margin-bottom:0.5rem;
+  }
+
   .md\:mb-20{
     margin-bottom:5rem;
   }
@@ -1010,6 +1076,18 @@ hover{
 
   .md\:mb-5{
     margin-bottom:1.25rem;
+  }
+
+  .md\:mb-6{
+    margin-bottom:1.5rem;
+  }
+
+  .md\:mb-8{
+    margin-bottom:2rem;
+  }
+
+  .md\:ml-12{
+    margin-left:3rem;
   }
 
   .md\:ml-2{
@@ -1024,24 +1102,8 @@ hover{
     margin-top:2.5rem;
   }
 
-  .md\:mb-8{
-    margin-bottom:2rem;
-  }
-
-  .md\:mb-6{
-    margin-bottom:1.5rem;
-  }
-
-  .md\:mb-2{
-    margin-bottom:0.5rem;
-  }
-
   .md\:mt-20{
     margin-top:5rem;
-  }
-
-  .md\:ml-12{
-    margin-left:3rem;
   }
 
   .md\:flex{
@@ -1050,6 +1112,10 @@ hover{
 
   .md\:w-1\/5{
     width:20%;
+  }
+
+  .md\:w-2\/5{
+    width:40%;
   }
 
   .md\:w-3\/5{
@@ -1068,12 +1134,8 @@ hover{
     width:auto;
   }
 
-  .md\:w-full{
-    width:100%;
-  }
-
-  .md\:w-2\/5{
-    width:40%;
+  .md\:w-1\/4{
+    width:25%;
   }
 
   .md\:flex-row{
@@ -1167,6 +1229,11 @@ hover{
     font-size:2.625rem;
   }
 
+  .md\:text-base{
+    font-size:1rem;
+    line-height:1.5rem;
+  }
+
   .md\:text-lg{
     font-size:1.125rem;
     line-height:1.75rem;
@@ -1175,11 +1242,6 @@ hover{
   .md\:text-xl{
     font-size:1.25rem;
     line-height:1.75rem;
-  }
-
-  .md\:text-base{
-    font-size:1rem;
-    line-height:1.5rem;
   }
 }
 
@@ -1192,7 +1254,16 @@ hover{
     width:33vw;
   }
 
+  .lg\:w-1\/5{
+    width:20%;
+  }
+
   .lg\:pl-16{
     padding-left:4rem;
+  }
+
+  .lg\:text-4xl{
+    font-size:2.25rem;
+    line-height:2.5rem;
   }
 }
